# L-GAME

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clean.sh  coding_standards  compile.sh  create_directories.sh  namelist.nml  setup_directories.sh
.github/ISSUE_TEMPLATE/: bug_report.md
compile/: CMakeLists.txt
grids/phys_sfc_properties/: download_etopo.sh  download_glcc.sh  download_gldbv2.sh  is_land.py  land_fraction.py
handbook/: handbook.aux  handbook.bbl  handbook.bcf  handbook.blg  handbook.out  handbook.tex  handbook.toc  references.bib
namelists/: bc_nml.f  bc_nml.f90  diff_nml.f90  hetero_nml.f90  init_nml.f90  io_nml.f90  rad_nml.f  rad_nml.f90  run_nml.f  run_nml.f90  surface_nml.f  surface_nml.f90
plotting/: plot.sh
plotting/.py/: vertical_slice.py
plotting/.sh/: root_script.sh
plotting/py/: integrals.py  vertical_slice.py
run_scripts/: advection.sh  create_grid.sh  ideal.sh  mountain_rest.sh  namelisrt  op.sh  root_script.sh  schaer.sh  seabreeze.sh  standard.sh  write_icao_atmosphere.sh
run_scripts/.sh/: download_phys_sfc_quantities.sh  root_script.sh
src/: constants.f90  constituents.f90  control.F90  control.f  control.f90  definitions.f90  mo_constants.F90  mo_constants.f90  mo_definitions.F90  mo_definitions.f90  rterrtmgp_coupler.f90  soil.f90
src/boundaries/: boundaries.f90
src/bounds/: bc.f90
src/constituents/: derived_quantities.f90  dictionary.f90  humidity.f90  mo_derived.F90  mo_derived.f90  mo_dictionary.F90  mo_dictionary.f90  mo_phase_trans.F90  mo_phase_trans.f90  phase_trans.f90
src/definitions/: definitions.f90
src/grid_generator/: grid_generator.f90
src/io/: boundaries.f90  grid_generator.f90  io.f90  mo_boundaries.F90  mo_boundaries.f90  mo_grid_generator.F90  mo_grid_generator.f90  mo_read_write_grid.F90  mo_read_write_grid.f90  mo_set_initial_state.F90  mo_set_initial_state.f90  mo_write_out.F90  mo_write_out.f90  read_init_state.f90  read_write_grid.f90  set_grid.f90  set_initial_state.f90  write_out.f90
src/namelists/: bc_nml.f90  constituents_nml.f90  diff_nml.f90  hetero_nml.f90  io_nml.f90  mo_bc_nml.F90  mo_bc_nml.f90  mo_constituents_nml.F90  mo_constituents_nml.f90  mo_diff_nml.F90  mo_diff_nml.f90  mo_io_nml.F90  mo_io_nml.f90  mo_rad_nml.F90  mo_rad_nml.f90  mo_run_nml.F90  mo_run_nml.f90  mo_surface_nml.F90  mo_surface_nml.f90  rad_nml.f90  run_nml.f90  surface_nml.f90
src/radiation/: manage_radiation_calls.f90  mo_manage_radiation_calls.F90  mo_manage_radiation_calls.f90  mo_rterrtmgp_coupler.F90  mo_rterrtmgp_coupler.f90  rterrtmgp_coupler.f90
src/spatial_operators/: averaging.f90  divergence_operators.f90  divergences.f  divergences.f90  gradient_operators.f  gradient_operators.f90  inner_product.f90  linear_combine_two_states.f90  mo_averaging.F90  mo_averaging.f90  mo_divergence_operators.F90  mo_divergence_operators.f90  mo_gradient_operators.F90  mo_gradient_operators.f90  mo_inner_product.F90  mo_inner_product.f90  mo_linear_combination.F90  mo_linear_combination.f90  mo_linear_combine_two_states.f90  mo_momentum_diff_diss.F90  mo_momentum_diff_diss.f90  mo_multiplications.F90  mo_multiplications.f90  mo_vorticities.F90  mo_vorticities.f90  mo_vorticity_flux.F90  mo_vorticity_flux.f90  momentum_diff_diss.f  momentum_diff_diss.f90  multiplications.f90  vorticities.f  vorticities.f90  vorticity_flux.f90
src/subgrid_scale/: effective_diff_coeffs.f90  mo_eff_diff_coeffs.F90  mo_eff_diff_coeffs.f90  mo_pbl.F90  mo_pbl.f90  mo_planetary_boundary_layer.f90  mo_tke.F90  mo_tke.f90  planetary_boundary_layer.f90  tke.f90
src/templates/: mo_module.f90  mo_namelist_nml.f90  module.f90  namelist_nml.f90
src/thermodynamics/: thermodynamics.f90
src/time_stepping/: column_solvers.f90  explicit_scalar_tendencies.f90  explicit_vector_tendencies.f90  manage_pchevi.f90  manage_rkhevi.f90  mo_column_solvers.F90  mo_column_solvers.f90  mo_explicit_scalar_tendencies.f90  mo_explicit_vector_tendencies.f90  mo_manage_pchevi.F90  mo_manage_pchevi.f90  mo_p_grad.F90  mo_pgrad.F90  mo_pgrad.f90  mo_pressure_gradient.f90  mo_scalar_tend_expl.F90  mo_scalar_tend_expl.f90  mo_vector_tend_expl.F90  mo_vector_tend_expl.f90  pressure_gradient.f90  scalar_tendencies_expl.f90  vertical_slice_solvers.f90
templates/: mo_module.F90  mo_namelist_nml.F90
